# wayland-multipointer

./: .gitignore  README.md  SPEC.md  pyproject.toml  run_tests.py
src/mpx_wayland/: __init__.py
src/mpx_wayland/cli/: __init__.py  mpx_ctl.py
src/mpx_wayland/config/: __init__.py  config.py
src/mpx_wayland/core/: __init__.py  models.py  seat_manager.py
src/mpx_wayland/simulation/: __init__.py  simulator.py
tests/integration/: test_simulation.py
tests/unit/: test_config.py  test_models.py  test_seat_manager.py
